fixed zipcode alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -211,8 +211,7 @@ input[type=radio]{
     #zipcodeL{
         padding: 10px 10px 10px 20px;
         width: 100px;
-        margin-right: 39%;
-        margin-left: 26%;
+        margin-right: 45%;
     }
 
 
